syntax = "proto3";
package cirrus.api;

// message AudioFileReq {
//     string audio_tag_id = 1;
// }

message AudioMetaReq {
    string audio_tag_id = 1;
}

message AudioMetaRes {
    uint32 bit_rate = 1;
    uint32 channels = 2;
    uint32 sample_frames = 3;
    uint32 sample_rate = 4;
}

message AudioDataReq {
    string audio_tag_id = 1;
    uint32 samples_size = 2;
    uint32 samples_start_idx = 3;
    uint32 samples_end_idx = 4;
}

message AudioChannelData {
    // bytes content = 1;
    // ref: https://stackoverflow.com/questions/6825196/protocol-buffers-store-an-double-array-1d-2d-and-3d
    repeated float content = 1 [packed=true];
}


message AudioDataRes {
    // bytes content = 1;
    repeated AudioChannelData audio_channel_data = 1;
}

message AudioLibraryReq {
    string path = 1;
}

message AudioTagRes {
    string id = 1;
    string artist = 2;
    string genre = 3;
    string title = 4;
}